# sbom

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  justfile
.github/: update-version.py
.github/workflows/: ci.yml  install.yml  release.yml
src/: bin.rs  lib.rs
src/analyzers/: analyze.rs  spec.rs
src/analyzers/python/: setuptools.rs
src/analyzers/python/utils/: pip_list.rs
src/cli/: opts.rs  scan.rs
src/io/: cmd.rs
