[package]
name = "sbom"
version = "0.0.1-dirty"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[lib]
name = "sbom_rs"
path = "src/lib.rs"

[[bin]]
name = "sbom"
path = "src/bin.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
toml = "*"
rayon = "*"
clap = { version = "4.4.11", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
thiserror="*"
glob = "0.3.1"
typed-builder = "0.18.0"
itertools = "0.12.0"
derive_more = "0.99.17"
path-clean = "1.0.1"
serde_json = "1.0.108"
petgraph = { version = "0.6.4", features = ["serde-1"] }
git-version = "0.3.9"
ascii_table = "4.0.3"

[dev-dependencies]
arbtest = "0.2.0"
